2007-09-13  Katsumi Yamaoka  <yamaoka@jpl.org>

	* gnus.el (gnus-newsgroup-maximum-articles): Rename from
	gnus-maximum-newsgroup.  Suggested by Leo <sdl.web@gmail.com>.

	* gnus-agent.el (gnus-agent-fetch-headers): Do.

	* gnus-sum.el (gnus-articles-to-read, gnus-list-of-unread-articles)
	(gnus-list-of-read-articles, gnus-sequence-of-unread-articles): Do.

2007-09-13  Katsumi Yamaoka  <yamaoka@jpl.org>

	* nnmbox.el (nnmbox-request-article): Don't assume delim regexp matches
	newline.
	(nnmbox-request-accept-article): Don't change article in source buffer;
	narrow to header to use message-fetch-field rather than
	nnmail-fetch-field; use with-current-buffer instead of save-excursion.
	(nnmbox-request-replace-article): Quote lines that'll be misidentified
	as delimiters; make sure article ends with newline.
	(nnmbox-delete-mail): Correct last position of article to be deleted;
	ignore X-Gnus-Newsgroup header in article body.
	(nnmbox-save-mail): Quote lines looking like delimiters at the right
	positions; make sure article ends with newline.

	* lpath.el: Don't bind define-ccl-program for non-Mule XEmacs.

	* dgnushack.el: Bind or autoload define-ccl-program for XEmacs.

2007-09-05  Katsumi Yamaoka  <yamaoka@jpl.org>

	* gnus-cus.el (gnus-score-extra): New widget.
	(gnus-score-extra-convert): New function.
	(gnus-score-customize): Use it for Extra.

2007-08-23  Katsumi Yamaoka  <yamaoka@jpl.org>

	* mml.el (mml-generate-mime): Make sure it uses multibyte temp buffer.
	(mml-generate-mime-1): Don't encode body if it is specified to be in
	raw form; don't make buffer be unibyte when inserting multibyte string.

2007-08-23  Stefan Monnier  <monnier@iro.umontreal.ca>

	* sha1.el: Fix up comment style.
	(sha1-F0, sha1-F1, sha1-F2, sha1-F3, sha1-S1, sha1-S5, sha1-S30)
	(sha1-OP, sha1-add-to-H): Use new-style backquotes.

	* hex-util.el: Fix up comment style.
	(hex-char-to-num, num-to-hex-char): Use new-style backquotes.

	* gnus-salt.el: Use with-current-buffer.